# Toolbox-Studio

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: 00-OVERVIEW.md  01-WEBDEV-OTTIMIZZAZIONE.md  02-WEBDEV-WORDPRESS.md  03-WEBDEV-WORKFLOW.md  04-EDITING-FOTO.md  05-EDITING-VIDEO.md  06-COLLABORAZIONE.md  07-ARCHITETTURA-TECNICA.md  08-QA-OPTIMIZE.md  09-WEBDEV-SRCSET.md  10-WEBDEV-FAVICON.md  11-WEBDEV-SOCIAL.md  12-WEBDEV-BATCH-RENAME.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: automation.rs  brand.rs  convert.rs  favicon.rs  filesystem.rs  mod.rs  rename.rs  report.rs  scan.rs  settings.rs  video.rs
src-tauri/src/processing/: cache.rs  mod.rs  presets.rs  processor.rs
src/components/: BatchProgress.tsx  ConvertBottomBar.tsx  ImageCard.tsx  ImageGrid.tsx  ImagePreview.tsx  ImageRow.tsx  PresetPanel.tsx  ResizableModuleLayout.tsx  SettingsPanel.tsx  SettingsToolbar.tsx
src/modules/: registry.ts
src/modules/automation/: AutomationModule.tsx  automation.css  config.ts
src/modules/batch-rename/: BatchRenameModule.tsx  batch-rename.css  config.ts
src/modules/brand/: BrandModule.tsx  brand.css  config.ts
src/modules/favicon/: FaviconModule.tsx  config.ts  favicon.css
src/modules/optimize/: config.ts
src/modules/social/: SocialMediaModule.tsx  config.ts  (+2 more)
src/optimize/: OptimizeModule.tsx
src/shell/: HomeDashboard.tsx  index.ts  routes.ts  shell.css  types.ts
(+11 files in other folders)
