[package]
name = "toolbox-creative-studio"
version = "1.0.0"
description = "Suite desktop per workflow immagini, web e automazione"
authors = ["you"]
edition = "2021"

[lib]
name = "toolbox_creative_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff", "avif"] }
webp = "0.3"
base64 = "0.22"
rayon = "1.10"
ico = "0.4"
notify = "6"
